Fixed Auth0 CSS CDN linkage on Pug Index

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,8 @@
 doctype html
 html(lang="en")
   head
-    a(rel="stylesheet" href="https://cdn.auth0.com/styleguide/core/2.0.5/core.min.css")
-    a(rel="stylesheet" href="https://cdn.auth0.com/styleguide/components/2.0.0/components.min.css")
+    link(rel='stylesheet', href='https://cdn.auth0.com/styleguide/core/2.0.5/core.min.css')
+    link(rel='stylesheet', href='https://cdn.auth0.com/styleguide/components/2.0.0/components.min.css')
 
   body
     header.site-header
